; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_pid_is_alive.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_pid_is_alive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_pid_is_alive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_pid_is_alive() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = call i64 (...) @fork()
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp sge i64 %4, 0
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert_se(i32 %6)
  %8 = load i64, i64* %1, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i32, i32* @EXIT_SUCCESS, align 4
  %12 = call i32 @_exit(i32 %11) #3
  unreachable

13:                                               ; preds = %0
  %14 = load i64, i64* %1, align 8
  %15 = call i32 @waitpid(i64 %14, i32* %2, i32 0)
  %16 = load i64, i64* %1, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @pid_is_alive(i32 %17)
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert_se(i32 %21)
  br label %23

23:                                               ; preds = %13
  %24 = call i32 (...) @getpid_cached()
  %25 = call i32 @pid_is_alive(i32 %24)
  %26 = call i32 @assert_se(i32 %25)
  %27 = call i32 @pid_is_alive(i32 -1)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert_se(i32 %30)
  ret void
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @assert_se(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2

declare dso_local i32 @waitpid(i64, i32*, i32) #1

declare dso_local i32 @pid_is_alive(i32) #1

declare dso_local i32 @getpid_cached(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
